# multi-drone-coordination

./: .gitignore  GETTING_STARTED.md  README.md  TECHNICAL.md  build  install  log
src/multi_drone_pkg/: LICENSE  package.xml  setup.cfg  setup.py
src/multi_drone_pkg/launch/: multi_drone_launch.py  rviz_swarm_launch.py  swarm_launch.py
src/multi_drone_pkg/multi_drone_pkg/: drone_node.py  supervisor.py  swarm_controller.py
src/multi_drone_pkg/rviz/: swarm.rviz
